Update CSS for Redis Demo Videos
* Updated CSS to match the currently used style.
* Changed default Redis version to redis50

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,19 +4,25 @@
     <link rel="stylesheet" media="all" href="/public/style.css">
   </head>
   <body>
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar">
       <div class="container">
-        <a class="navbar-brand" href="/"><img alt="anynines logo" height="60" src="/public/anynines.svg"></a>
+        <a class="navbar-brand" href="/">
+          <img
+          alt="anynines logo"
+          class="logo"
+          height="40"
+          src="/public/logo.svg" />
+        </a>
       </div>
     </div>
-
 
     {{template "body" .}}
 
     <div class="footer">
-      <div class="container">
-        <span>© 2018 <a href="https://enterprise.anynines.com/">anynines enterprise</a></span>
-      </div>
+      <span>
+        © 2021
+        <a target="_blank" href="https://www.anynines.com/">anynines GmbH</a>
+      </span>
     </div>
   </body>
 </html>
